cmake_minimum_required(VERSION 3.16)
project(dufos CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

set(COMMON_LIB_NAME common)

file(GLOB_RECURSE COMMON_SOURCES src/*.cpp)

# add_library(${COMMON_LIB_NAME} STATIC ${COMMON_SOURCES} include/Singleton.hpp)
add_library(${COMMON_LIB_NAME} STATIC ${COMMON_SOURCES})

target_include_directories(${COMMON_LIB_NAME} PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)
