cmake_minimum_required(VERSION 3.16)
project(dufos CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

set(COMMON_LIB common)

file(GLOB_RECURSE COMMON_SOURCES src/*.cpp)

add_library(${COMMON_LIB} STATIC ${COMMON_SOURCES})

target_include_directories(${COMMON_LIB} PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)
